样式与功能优化

--- a/template/src/assets/css/public.css
+++ b/template/src/assets/css/public.css
@@ -13,6 +13,7 @@ html,body{
     Segoe UI, Arial, Roboto, "PingFang SC", miui, "Hiragino Sans GB",
     "Microsoft Yahei", sans-serif;
     color: #333333;
+    font-size: 0.14rem;
 }
 
 .row{
