--- a/template/src/components/clam_view/clam_view.css
+++ b/template/src/components/clam_view/clam_view.css
@@ -3,16 +3,16 @@
     height: 100%;
 }
 .empty_view{
-    padding-top: 100px;
+    padding-top: 0.5rem;
     width: 100%;
     height: 100%;
-    padding-bottom: 100px;
+    padding-bottom: 0.5rem;
 }
 .empty_img{
-    width: 310px;
-    height: 218px;
+    width: 3.1rem;
+    height: 2.18rem;
 }
 .trip_text{
-    font-size: 28px;
+    font-size: 0.20rem;
     color: #999999;
 }
