--- a/template/src/components/list_view/list_view.css
+++ b/template/src/components/list_view/list_view.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 0.2rem;
     color: #777;
-    font-size: 15px;
+    font-size: 0.15rem;
 }
